# some-dice

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  README.md  build.rs
src/: lib.rs  outcome.rs
src/ast/: functional.rs  mod.rs
src/interpret/: chance.rs  config.rs  env.rs  factor.rs  interpreter.rs  mod.rs  output.rs
src/interpret/value/: dice.rs  mod.rs  number.rs  sequence.rs
src/parse/: error.rs  lexer.rs  mod.rs  parser.lalrpop  token.rs
src/sample/: distribution.rs  error.rs  mod.rs
